# NDKTest

./: .gitignore  README.md  build.gradle  settings.gradle
PoetTest/: ReadMe.md  build.gradle
PoetTest/src/main/java/com/example/poettest/: HelloAnnotationProcessorJava.kt  HelloClass.java  HelloPoet.java  HelloPoetProcessor.java  ServiceDelegationProcessor.java
USCDemo/src/cn/yunzhisheng/prodemo/: TTSOfflineActivity.java
annotation/: build.gradle
annotation/src/main/java/com/example/annotationone/: One.java  Three.kt  Two.kt
annotationOneProcess/src/main/java/com/example/annotationoneprocess/: OneProcessor.java
annotationThree/: build.gradle
annotationThree/src/main/kotlin/com/example/annotationthree/: ThreeProcessor.kt
annotationTwo/: build.gradle
app/: .gitignore  ReadMe.md  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cpptest.cpp  load.cpp  memory-alloc.cpp  native-lib.cpp  rename-thread.cpp
app/src/main/cpp/google/: CMakeLists.txt  com_google_speech_micro_GoogleHotwordData.cpp  com_google_speech_micro_GoogleHotwordData.h  com_google_speech_micro_GoogleHotwordData_type.h  com_google_speech_recognizer_AbstractRecognizer.cpp  com_google_speech_recognizer_AbstractRecognizer.h  google_type.h
app/src/main/cpp/hook/: CMakeLists.txt  get_functions.cpp  hookMem.cpp  replace_functions.cpp
app/src/main/cpp/hook/include/: get_functions.h
app/src/main/cpp/include/: link-multi.h  logutil.h  txz_def.h
app/src/main/cpp/other/: CMakeLists.txt  first-invoke.cpp  second-invoke.cpp
app/src/main/cpp/stack/: CMakeLists.txt  showStack.cpp  stackjni.cpp
app/src/main/cpp/txzlog/: CMakeLists.txt  ILogAdapter_jni.cpp  JNILogManager.cpp  JNILogManager.h
app/src/main/cpp/utils/: CMakeLists.txt
app/src/main/cpp/utils/charset/: CMakeLists.txt  charsetUtils.cpp  charset_util.cpp  charset_util.h  tconv_comm.cpp  tconv_g2u.cpp  tconv_g2u.h
app/src/main/cpp/utils/dns/: CMakeLists.txt  Int2Ip.cpp  Int2Ip.h  android_bridge.cpp  com_example_myapplication_utils_DnsUtils_Companion.h  txz_cache_dns.cpp  txz_cache_dns.h  txz_dns.cpp  txz_dns.h
app/src/main/java/com/example/myapplication/: BaseActivity.java  (+17 more)
app/src/main/res/layout/: activity_butter_knief.xml  activity_main.xml
testyzsso/: build.gradle
testyzsso/src/main/: AndroidManifest.xml
testyzsso/src/main/assets/: testPcm.snd
testyzsso/src/main/assets/config/: config_file
testyzsso/src/main/assets/models/: jsgf_clg.dat.recognize  jsgf_clg.dat.wakeup  recognize.jsgf  recognize.vocab  wakeup.jsgf  wakeup.vocab
testyzsso/src/main/res/layout/: activity_main.xml  activity_unisound_asr.xml
testyzsso/src/main/res/values/: strings.xml
xianlairemovead/src/main/: AndroidManifest.xml
xianlairemovead/src/main/res/values/: strings.xml
(+30 files in other folders)
